# experimental

configuration-setting-test/: README.md  go.mod  postgres_tables.sql  user_insert.go
dwi-load-test/: .gitignore  README.md  build.gradle  settings.gradle
dwi-load-test/src/test/resources/: create-job.feature  karate-config.js  logback.xml  login.feature  switch-facility.feature
go-practice/: .gitignore  README.md  go.mod  go.work
go-practice/cmd/app/: main.go
go-practice/constants/: main.go
go-practice/data_types/: main.go
go-practice/erasure-coding/: README.md  go.mod
go-practice/erasure-coding/examples/phase1_xor_demo/: main.go
go-practice/erasure-coding/pkg/erasurecoding/phase1/: xor_parity.go  xor_parity_test.go
go-practice/fundamentals/: README.md  go.mod
go-practice/fundamentals/pkg/fundamentals/constants/: constants.go  constants_test.go
go-practice/fundamentals/pkg/fundamentals/datatypes/: datatypes.go  datatypes_test.go
go-practice/fundamentals/pkg/fundamentals/greeting/: greeting.go
go-practice/fundamentals/pkg/fundamentals/variables/: variables.go  variables_test.go
go-practice/internal/config/: config.go
go-practice/pkg/greeting/: greeting_test.go
go-practice/variables/: main.go
id-uuid-benchmark/: README.md  go.mod  main.go
misc/: build.gradle
rust-practice/: Cargo.toml  README.md
rust-practice/erasure-coding/: Cargo.toml  README.md
rust-practice/erasure-coding/examples/: phase1_xor_demo.rs
rust-practice/erasure-coding/src/: lib.rs  main.rs  phase1_xor_parity.rs
rust-practice/src/: main.rs
(+9 files in other folders)
